recursion.lessons.recursion.tree.Tree.scala.error
Tree:11: error: not found: value lenght
		avance(lenght);
                       ^